05_squares/grade.txt
Grading at Wed Oct  2 04:20:13 UTC 2019
Trying to compile your code and link with squares_test.o
squares.c: In function ‘squares’:
squares.c:62:22: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
       else if(x<size1&&(y==0||y==size1-1)||y<size1&&(x==0||x==size1-1))
                      ^
cc1: all warnings being treated as errors
Could not compile your code

Overall Grade: FAILED
